[gd_scene load_steps=8 format=3 uid="uid://nqujpg63y81y"]

[ext_resource type="Script" uid="uid://bdiduvl8rtbil" path="res://selection_menu/selection_menu.gd" id="1_5pjgy"]
[ext_resource type="Texture2D" uid="uid://bo5oc502lnto7" path="res://assets/windrise-bg-sky.png" id="1_ypshd"]
[ext_resource type="FontFile" uid="uid://cgaio2xcrk44n" path="res://assets/retro-pixel-thick.ttf" id="2_5pjgy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mu5s2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1iqu1"]
bg_color = Color(0.893841, 0.760671, 0, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32
shadow_color = Color(0, 0, 0, 0.666667)
shadow_size = 8
shadow_offset = Vector2(0, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e3kod"]
bg_color = Color(1, 0.836833, 0.11, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32
shadow_color = Color(0, 0, 0, 0.666667)
shadow_size = 8
shadow_offset = Vector2(0, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6g1i2"]
bg_color = Color(0.98438, 0.815719, 1.15514e-06, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32
shadow_color = Color(0, 0, 0, 0.666667)
shadow_size = 8
shadow_offset = Vector2(0, 4)

[node name="Selection_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5pjgy")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ypshd")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="Separator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 64
theme_override_fonts/font = ExtResource("2_5pjgy")
theme_override_font_sizes/font_size = 128
text = "Escolha o Paciente"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 64
alignment = 1

[node name="Separator" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="SearchName" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_direction = 2
layout_mode = 2
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("2_5pjgy")
theme_override_font_sizes/font_size = 64
placeholder_text = "Digite o Nome do Paciente..."

[node name="LogIn" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(550, 164)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0.823529, 0.192157, 0.933333)
theme_override_colors/font_pressed_color = Color(0, 0.895063, 0.212281, 0.933333)
theme_override_constants/outline_size = 32
theme_override_fonts/font = ExtResource("2_5pjgy")
theme_override_font_sizes/font_size = 128
theme_override_styles/focus = SubResource("StyleBoxEmpty_mu5s2")
theme_override_styles/hover = SubResource("StyleBoxFlat_1iqu1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_e3kod")
theme_override_styles/normal = SubResource("StyleBoxFlat_6g1i2")
text = " ENTRAR / CRIAR "

[node name="Delete" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(550, 164)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0.823529, 0.192157, 0.933333)
theme_override_colors/font_pressed_color = Color(0, 0.895063, 0.212281, 0.933333)
theme_override_constants/outline_size = 32
theme_override_fonts/font = ExtResource("2_5pjgy")
theme_override_font_sizes/font_size = 128
theme_override_styles/focus = SubResource("StyleBoxEmpty_mu5s2")
theme_override_styles/hover = SubResource("StyleBoxFlat_1iqu1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_e3kod")
theme_override_styles/normal = SubResource("StyleBoxFlat_6g1i2")
text = "EXCLUIR"

[connection signal="text_changed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/SearchName" to="." method="_on_name_input_text_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/LogIn" to="." method="_on_login_create_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Delete" to="." method="_on_delete_button_pressed"]
